# try-rs-mono-release-please

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: release-please.yml
crates/crate1/: CHANGELOG.md  Cargo.toml
crates/crate1/src/: lib.rs
crates/crate2/: CHANGELOG.md  Cargo.toml
crates/crate2/src/: lib.rs
src/: lib.rs
