[package]
name = "try-rs-mono-release-please"
version = "0.5.5"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "packages/crate1",
  "packages/crate2",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.74"

[dependencies]
